--- a/public/app.css
+++ b/public/app.css
@@ -10,7 +10,7 @@
 
 .slick-prev,
 .slick-next {
-    border-radius: 0 3px 3px 0;
+    /* border-radius: 0 3px 3px 0; */
     z-index:1;
 }
 .image-arrow-box-container, .slick-prev,
@@ -19,10 +19,7 @@
     top: 0%;
     height: 100%;
 }
-/* button {
-    color:black;
-    background-color: antiquewhite;
-} */
+
 .slick-prev, .slick-next {
     width:40px;
     height:60px;
@@ -40,7 +37,7 @@
     -moz-font-feature-settings: "liga";
     font-feature-settings: "liga";
     color: #F2F1F1;
-    background: #97928F;
+    /* background: #97928F; */
     opacity: 0.8;
 
 }
@@ -137,7 +134,7 @@
 }
 
 .slick-prev {
-    left: -25px;
+    /* left: -25px; */
 }
 
 [dir='rtl'] .slick-prev {
@@ -154,7 +151,7 @@
 }
 
 .slick-next {
-    right: -25px;
+    right: -2px;
 }
 
 [dir='rtl'] .slick-next {
