--- a/public/app.css
+++ b/public/app.css
@@ -22,6 +22,8 @@
     position: absolute;
     top: 0%;
     height: 100%;
+    line-height: 86px;
+    
 }
 
 .slick-prev, .slick-next {
@@ -63,7 +65,16 @@
     src: url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/fonts/slick.eot');
     src: url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/fonts/slick.eot?#iefix') format('embedded-opentype'), url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/fonts/slick.woff') format('woff'), url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/fonts/slick.ttf') format('truetype'), url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/fonts/slick.svg#slick') format('svg');
 }
-
+@font-face {
+    font-family: "SSStandard";
+    src: font-url('./fonts/ss-standard.eot');
+    src: font-url('./fonts/ss-standard.eot?#iefix') format('embedded-opentype'),
+         font-url('./fonts/ss-standard.woff') format('woff'),
+         font-url('./fonts/ss-standard.ttf')  format('truetype'),
+         font-url('./fonts/ss-standard.svg#SSStandard') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
 
 
 
@@ -90,7 +101,7 @@
 
 .slick-prev:before,
 .slick-next:before {
-    font-family: 'slick';
+    font-family: "SSStandard"
     font-size: 20px;
     line-height: 86px;
     opacity: .75;
@@ -109,11 +120,14 @@
 }
 
 .slick-prev:before {
-    content: '←';
+    line-height: 86px;
+    content: '◅';
+    font-family: "SSStandard"
 }
 
 [dir='rtl'] .slick-prev:before {
-    content: '→';
+    content: '▻';
+    font-family: "SSStandard"
 }
 
 .slick-next {
@@ -126,11 +140,12 @@
 }
 
 .slick-next:before {
-    content: '→';
+    content: '▻';
 }
 
 [dir='rtl'] .slick-next:before {
-    content: '←';
+    line-height: 86px;
+    content: '◅';
 }
 
 /* Dots */
