--- a/public/app.css
+++ b/public/app.css
@@ -53,9 +53,25 @@
 
 /* Slider */
 
-.slick-loading .slick-list {
+.slick-loading {
     background: #fff url('./ajax-loader.gif') center center no-repeat;
     width: 505px;
+    background-color: rgb(245, 245, 241);
+  box-shadow: rgb(0, 0, 0) 0px 0px 40px -25px inset;
+  font-family: "Graphik Webfont", -apple-system, BlinkMacSystemFont, "Roboto", "Droid Sans", "Segoe UI", "Helvetica", Arial, sans-serif;
+  font-size: 12px;
+  margin-bottom: 4px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+  position: relative;
+  text-align: center;
+  text-rendering: optimizelegibility;
+  visibility: visible;
 }
 
 /* Icons */
@@ -78,7 +94,11 @@
     src: url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/fonts/slick.eot?#iefix') format('embedded-opentype'), url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/fonts/slick.woff') format('woff'), url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/fonts/slick.ttf') format('truetype'), url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/fonts/slick.svg#slick') format('svg');
 }
 
-
+.content {
+    padding: 20px;
+    margin: auto;
+    width: 90%;
+  }
 
 .slick-prev:hover,
 .slick-prev:focus,
@@ -223,4 +243,158 @@
 }
 .dot-style {
     margin-top: 7px;
+}
+
+.image-container, .slick-active, .slick-slide {
+  background-color: rgb(245, 245, 241);
+  box-shadow: rgb(0, 0, 0) 0px 0px 40px -25px inset;
+  font-family: "Graphik Webfont", -apple-system, BlinkMacSystemFont, "Roboto", "Droid Sans", "Segoe UI", "Helvetica", Arial, sans-serif;
+  font-size: 12px;
+  margin-bottom: 4px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: auto;
+  padding-bottom: 10px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 10px;
+  /* position: relative; */
+  text-align: center;
+  text-rendering: optimizelegibility;
+  visibility: visible;
+  width: '560px';
+  height: '509px';
+  /* transform: 'perspective(1px) translateY(-50%)', */
+  display: flex;
+  min-height: 0;
+  min-width: 0;
+     align-items: center;
+     justify-content: center;
+     /* height: 100vh;  */
+}
+
+/* Slider */
+.slick-slider
+{
+    position: relative;
+
+    display: block;
+    box-sizing: border-box;
+
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+    position: relative;
+
+    display: block;
+    overflow: hidden;
+
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+
+     display: flex;
+     align-items: center;
+     justify-content: center;
+    position: relative;
+    top: 0;
+    left: 0;
+
+    display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+    height: 509px;
+    /* height: 100%; */
+
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img {
+    display: flex;
+     align-items: center;
+     margin: 0 auto;
+    /* margin-top:auto;
+    margin-bottom: auto;
+    display: block; */
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+
+    height: auto;
+
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
 }
