--- a/public/app.css
+++ b/public/app.css
@@ -73,6 +73,124 @@
   text-rendering: optimizelegibility;
   visibility: visible;
 }
+@font-face {
+    font-family: "Guardian-EgypTT";
+    src: url("/assets/type/Guardian-EgypTT-Semibold.woff2") format("woff2");
+    font-style: normal;
+    font-weight: 600;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Guardian-EgypTT";
+    src: url("/assets/type/Guardian-EgypTT-Medium.woff2") format("woff2");
+    font-style: normal;
+    font-weight: 500;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Guardian-EgypTT";
+    src: url("/fonts/Guardian-EgypTT-Regular.eot");
+    src: url("/fonts/Guardian-EgypTT-Regular.eot?#iefix") format("embedded-opentype"), url("/fonts/Guardian-EgypTT-Regular.woff2") format("woff2"), url("/fonts/Guardian-EgypTT-Regular.woff") format("woff"), url("/fonts/Guardian-EgypTT-Regular.ttf") format("truetype"), url("/fonts/Guardian-EgypTT-Regular.svg#Guardian EgypTT") format("svg");
+    font-style: normal;
+    font-weight: 400;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Guardian-EgypTT-Regular";
+    src: url("/fonts/Guardian-EgypTT-Regular-It.woff2") format("woff2");
+    font-style: italic;
+    font-weight: 400;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Guardian-EgypTT-Light";
+    src: url("/fonts/Guardian-EgypTT-Light-It.woff2") format("woff2");
+    font-style: italic;
+    font-weight: 300;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Guardian-EgypTT";
+    src: url("/fonts/Guardian-EgypTT-Light.woff2") format("woff2");
+    font-style: normal;
+    font-weight: 300;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Guardian-EgypTT-Text";
+
+    src: url("/fonts/Guardian-EgypTT-Text-Regular.woff2") format("woff2");
+    font-style: normal;
+    font-weight: 400;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Guardian-EgypTT-Text";
+    src: url("/fonts/Guardian-EgypTT-Text-Regular-It.woff2") format("woff2");
+    font-style: italic;
+    font-weight: 400;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Guardian-EgypTT-Text";
+
+    src: url("/fonts/Guardian-EgypTT-Text-Medium.woff2") format("woff2");
+    font-style: normal;
+    font-weight: 500;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Graphik Web";
+    src: url("/fonts/Graphik-Regular-Web.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Graphik Web";
+    src: url("/assets/type/Graphik-Regular-Web.eot");
+    src: url("/assets/type/Graphik-Regular-Web.eot?#iefix") format("embedded-opentype"), url("/assets/type/Graphik-Regular-Web.woff2") format("woff2"), url("/assets/type/Graphik-Regular-Web.woff") format("woff"), url("/assets/type/Graphik-Regular-Web.svg#Graphik-Regular-Web") format("svg"), url("/assets/type/Graphik-Regular-Web.ttf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Graphik Web";
+    src: url("/assets/type/Graphik-Medium-Web.eot");
+    src: url("/assets/type/Graphik-Medium-Web.eot?#iefix") format("embedded-opentype"), url("/assets/type/Graphik-Medium-Web.woff2") format("woff2"), url("/assets/type/Graphik-Medium-Web.woff") format("woff"), url("/assets/type/Graphik-Medium-Web.svg#Graphik-Medium-Web") format("svg"), url("/assets/type/Graphik-Medium-Web.ttf") format("opentype");
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Graphik Web";
+    src: url("/assets/type/Graphik-Medium-Web.eot");
+    src: url("/assets/type/Graphik-Medium-Web.eot?#iefix") format("embedded-opentype"), url("/assets/type/Graphik-Medium-Web.woff2") format("woff2"), url("/assets/type/Graphik-Medium-Web.woff") format("woff"), url("/assets/type/Graphik-Medium-Web.svg#Graphik-Medium-Web") format("svg"), url("/assets/type/Graphik-Medium-Web.ttf") format("opentype");
+    font-weight: 700;
+    font-style: normal;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: "Graphik Web";
+    src: url("/assets/type/Graphik-Medium-Web.eot");
+    src: url("/assets/type/Graphik-Medium-Web.eot?#iefix") format("embedded-opentype"), url("/assets/type/Graphik-Medium-Web.woff2") format("woff2"), url("/assets/type/Graphik-Medium-Web.woff") format("woff"), url("/assets/type/Graphik-Medium-Web.svg#Graphik-Medium-Web") format("svg"), url("/assets/type/Graphik-Medium-Web.ttf") format("opentype");
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+}
 
 /* Icons */
 @font-face {
@@ -85,7 +203,13 @@
     font-weight: normal;
     font-style: normal;
   }
-
+  @font-face {
+    font-family: "SSEtsy";
+    src: url('/fonts/ss-etsy-2.woff2') format('woff2');
+       
+    font-weight: normal;
+    font-style: normal;
+  }
 @font-face {
     font-family: 'slick';
     font-weight: normal;
@@ -397,4 +521,11 @@
 }
 .slick-arrow.slick-hidden {
     display: none;
+}
+.ss-icon {
+    font-family: 'SSEtsy'
+}
+
+.zoom {
+    font-family: "Graphik Web"
 }
