--- a/public/app.css
+++ b/public/app.css
@@ -9,7 +9,8 @@
 }
 
 .thumb-default {
-    opacity: 0.6
+    opacity: 0.6;
+    border-radius: 3px;
 }
 
 .slick-prev,
@@ -23,30 +24,177 @@
     top: 0%;
     height: 100%;
 }
-
-.slick-prev, .slick-next {
-    width:40px;
-    height:60px;
-    line-height: 86px;
+.slick-prev {
+    align-items: flex-start;
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-color: rgb(151, 146, 143);
+    background-image: none;
+    background-origin: padding-box;
+    background-position-x: 0%;
+    background-position-y: 0%;
+    background-repeat-x:;
+    background-repeat-y:;
+    background-size: auto;
+    border-bottom-color: rgb(242, 241, 241);
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 3px;
+    border-bottom-style: none;
+    border-bottom-width: 0px;
+    border-image-outset: 0px;
+    border-image-repeat: stretch;
+    border-image-slice: 100%;
+    border-image-source: none;
+    border-image-width: 1;
+    border-left-color: rgb(242, 241, 241);
+    border-left-style: none;
+    border-left-width: 0px;
+    border-right-color: rgb(242, 241, 241);
+    border-right-style: none;
+    border-right-width: 0px;
+    border-top-color: rgb(242, 241, 241);
+    border-top-left-radius: 0px;
+    border-top-right-radius: 3px;
+    border-top-style: none;
+    border-top-width: 0px;
+    box-sizing: border-box;
+    color: rgb(242, 241, 241);
+    cursor: default;
+    display: block;
+    filter: none;
+    font-family: SSStandard;
+    font-feature-settings: 'liga' 1;
     font-size: 24px;
-    margin-top: 245px;
-    text-align: center;
-    box-sizing: content-box;
-    font-family: "SSStandard";
+    font-stretch: 100%;
     font-style: normal;
-    font-weight: normal;
+    font-variant-caps: normal;
+    font-variant-east-asian: normal;
+    font-variant-ligatures: normal;
+    font-variant-numeric: normal;
+    font-weight: 400;
+    height: 80px;
+    letter-spacing: normal;
+    line-height: 86px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: -40px;
+    opacity: 0.4;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    position: absolute;
+    text-align: center;
+    text-decoration-color: rgb(242, 241, 241);
+    text-decoration-line: none;
+    text-decoration-style: solid;
+    text-indent: 0px;
     text-rendering: optimizeLegibility;
+    text-shadow: none;
+    text-transform: none;
+    top: 284px;
+    transition-delay: 0s;
+    transition-duration: 0.1s;
+    transition-property: all;
+    transition-timing-function: ease;
+    user-select: none;
+    visibility: visible;
     white-space: nowrap;
-    -moz-font-feature-settings: "liga=1";
-    -moz-font-feature-settings: "liga";
-    font-feature-settings: "liga";
-    color: #F2F1F1;
-    /* background: #97928F; */
-    opacity: 0.8;
-
+    width: 40px;
+    word-spacing: 0px;
+    writing-mode: horizontal-tb;
+    -webkit-appearance: none;
+    -webkit-font-smoothing: antialiased;
+    -webkit-border-image: none;
+}
+.slick-next {
+    align-items : flex-start;
+    background-attachment : scroll;
+    background-clip : border-box;
+    background-color : rgb(151, 146, 143);
+    background-image : none;
+    background-origin : padding-box;
+    background-position-x : 0%;
+    background-position-y : 0%;
+    background-repeat-x :;
+    background-repeat-y :;
+    background-size : auto;
+    border-bottom-color : rgb(242, 241, 241);
+    border-bottom-left-radius : 3px;
+    border-bottom-right-radius : 0px;
+    border-bottom-style : none;
+    border-bottom-width : 0px;
+    border-image-outset : 0px;
+    border-image-repeat : stretch;
+    border-image-slice : 100%;
+    border-image-source : none;
+    border-image-width : 1;
+    border-left-color : rgb(242, 241, 241);
+    border-left-style : none;
+    border-left-width : 0px;
+    border-right-color : rgb(242, 241, 241);
+    border-right-style : none;
+    border-right-width : 0px;
+    border-top-color : rgb(242, 241, 241);
+    border-top-left-radius : 3px;
+    border-top-right-radius : 0px;
+    border-top-style : none;
+    border-top-width : 0px;
+    box-sizing : border-box;
+    color : rgb(242, 241, 241);
+    cursor : default;
+    display : block;
+    filter : none;
+    font-family : SSStandard;
+    font-feature-settings : 'liga' 1;
+    font-size : 24px;
+    font-stretch : 100%;
+    font-style : normal;
+    font-variant-caps : normal;
+    font-variant-east-asian : normal;
+    font-variant-ligatures : normal;
+    font-variant-numeric : normal;
+    font-weight : 400;
+    height : 80px;
+    letter-spacing : normal;
+    line-height : 86px;
+    margin-bottom : 0px;
+    margin-left : 0px;
+    margin-right : 0px;
+    margin-top : -40px;
+    opacity : 0.4;
+    padding-bottom : 0px;
+    padding-left : 0px;
+    padding-right : 0px;
+    padding-top : 0px;
+    position : absolute;
+    right : 0px;
+    text-align : center;
+    text-decoration-color : rgb(242, 241, 241);
+    text-decoration-line : none;
+    text-decoration-style : solid;
+    text-indent : 0px;
+    text-rendering : optimizeLegibility;
+    text-shadow : none;
+    text-transform : none;
+    top : 284px;
+    transition-delay : 0s;
+    transition-duration : 0.1s;
+    transition-property : all;
+    transition-timing-function : ease;
+    user-select : none;
+    visibility : visible;
+    white-space : nowrap;
+    width : 40px;
+    word-spacing : 0px;
+    writing-mode : horizontal-tb;
+    -webkit-appearance : none;
+    -webkit-font-smoothing : antialiased;
+    -webkit-border-image : none;
 }
 
-@charset 'UTF-8';
+
 /* Slider */
 
 .slick-loading .slick-list {
