--- a/public/app.css
+++ b/public/app.css
@@ -1,4 +1,19 @@
 @charset 'UTF-8';
+
+.carousel-image:before {
+
+    -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  opacity: 0;
+  visibility: hidden; 
+  }
+
+  .carousel-image:after {
+    opacity: 1;
+    visibility: visible; 
+  }
 .slick-dots li {
     position: relative;
     display: inline-block;
@@ -510,6 +525,7 @@
 .slick-dots li.slick-active img {
     opacity: 1;
     color: black;
+    border-radius: 3px;
 }
 
 .dot-style {
@@ -548,100 +564,7 @@ img[class] {
         justify-content: center;
         /* height: 100vh;  */
     }
-    /* Slider */
-    .slick-slider {
-        position: relative;
-        display: block;
-        box-sizing: border-box;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        -webkit-touch-callout: none;
-        -khtml-user-select: none;
-        -ms-touch-action: pan-y;
-        touch-action: pan-y;
-        -webkit-tap-highlight-color: transparent;
-    }
-    .slick-list {
-        position: relative;
-        display: block;
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-    }
-    .slick-list:focus {
-        outline: none;
-    }
-    .slick-list.dragging {
-        cursor: pointer;
-        cursor: hand;
-    }
-    .slick-slider .slick-track,
-    .slick-slider .slick-list {
-        -webkit-transform: translate3d(0, 0, 0);
-        -moz-transform: translate3d(0, 0, 0);
-        -ms-transform: translate3d(0, 0, 0);
-        -o-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-    .slick-track {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        top: 0;
-        left: 0;
-        display: block;
-    }
-    .slick-track:before,
-    .slick-track:after {
-        display: table;
-        content: '';
-    }
-    .slick-track:after {
-        clear: both;
-    }
-    .slick-loading .slick-track {
-        visibility: hidden;
-    }
-    .slick-slide {
-        display: none;
-        float: left;
-        height: 509px;
-        /* height: 100%; */
-    }
-    [dir='rtl'] .slick-slide {
-        float: right;
-    }
-    .slick-slide img {
-        display: flex;
-        align-items: center;
-        margin: 0 auto;
-        /* margin-top:auto;
-    margin-bottom: auto;
-    display: block; */
-    }
-    .slick-slide.slick-loading img {
-        display: none;
-    }
-    .slick-slide.dragging img {
-        pointer-events: none;
-    }
-    .slick-initialized .slick-slide {
-        display: block;
-    }
-    .slick-loading .slick-slide {
-        visibility: hidden;
-    }
-    .slick-vertical .slick-slide {
-        display: block;
-        height: auto;
-        border: 1px solid transparent;
-    }
-    .slick-arrow.slick-hidden {
-        display: none;
-    }
+   
     .ss-icon {
         font-family: 'SSEtsy';
     }
