--- a/public/app.css
+++ b/public/app.css
@@ -1,5 +1,77 @@
 @charset 'UTF-8';
 
+.image-arrow-box {
+    border: none;
+    background: #97928F;
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+    margin-top: auto;
+    height: 80px;
+    line-height: 86px;
+    width: 40px;
+    font-size: 24px;
+    position: absolute;
+    top: 50%;
+    margin-top: -40px;
+    font-family: "SSStandard";
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: none;
+    text-rendering: optimizeLegibility;
+    white-space: nowrap;
+    -moz-font-feature-settings: "liga=1";
+    -moz-font-feature-settings: "liga";
+    -ms-font-feature-settings: "liga" 1;
+    -o-font-feature-settings: "liga";
+    font-feature-settings: "liga";
+    -webkit-font-smoothing: antialiased;
+    color: #F2F1F1;
+    transition: all 0.1s;
+    -webkit-transition: all 0.1s;
+}
+#image-right-arrow-container {
+    right: 0%;
+}
+#image-right-arrow {
+    border-radius: 3px 0 0 3px;
+
+}
+.image-arrow-box-container {
+    position: absolute;
+    top: 0%;
+    height: 100%;
+}
+.image-right-arrow-container {
+    display: block;
+    font-family: "Graphik Webfont",
+    -apple-system,
+    system-ui,
+    Roboto,
+    "Droid Sans",
+    "Segoe UI",
+    Helvetica,
+    Arial,
+    sans-serif;
+    font-size: 12px;
+    height: 568px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    position: absolute;
+    right: 0px;
+    text-align: center;
+    text-rendering: optimizeLegibility;
+    top: 0px;
+    user-select: none;
+    visibility: visible;
+    width: 0px;
+}
+
 .carousel-image:before {
 
     -webkit-transition: 0.5s;
@@ -186,7 +258,7 @@
     padding-right: 0px;
     padding-top: 0px;
     position: absolute;
-    right: 241px;
+    right: 0px;
     text-align: center;
     text-decoration-color: rgb(242, 241, 241);
     text-decoration-line: none;
