--- a/public/app.css
+++ b/public/app.css
@@ -11,6 +11,8 @@
     text-align: center;
     margin: 7px 0 0;
     min-height: 20px;
+    width: 570px;
+    display: inline-flex;
 }
 .image-footer .zoom {
     margin-top: -4px;
@@ -582,7 +584,6 @@ img[class] {
         color: #999999;
         float: right;
         font-size: 14px;
-        padding-left: 20px;
         text-decoration: none;
         transition: all 0.15s ease;
         -webkit-transition: all 0.15s ease;
@@ -592,4 +593,5 @@ img[class] {
         margin-right: 4px;
         position: relative;
         top: 3px;
+        
     }
