--- a/public/app.css
+++ b/public/app.css
@@ -474,6 +474,7 @@
         text-decoration: none;
         transition: all 0.15s ease;
         -webkit-transition: all 0.15s ease;
+        cursor: pointer;
     }
     .zoom .ss-icon {
         font-size: 16px;
